# crunchdot

./: .gitignore
godot/: icon.svg.import  placeholder_crunchclass.gd  project.godot  test.gdextension  testscn.gd  testscn.tscn
godot/addons/crunchdot/: plugin.cfg  working.gd
rust/: Cargo.toml
rust/src/: crunch.rs  lib.rs
