[package]
name = "crunchdot"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crunch = "0.5.3"
godot = { git = "https://github.com/godot-rust/gdext", branch = "master" }
